fix: read a whole statement, and a whole URL, before trusting either
The observation connector shipped with two checks that read the beginning of
something and concluded about the rest of it.

A statement was classified by its first keyword. PostgreSQL runs
`WITH x AS (DELETE FROM ledger RETURNING *) SELECT * FROM x`, which begins
`WITH` and deletes rows, and `SELECT … INTO` creates a table. Every bare word
is now read — outside string literals, quoted identifiers and comments — and a
word that can write from inside a reading statement refuses the observation.
The list is short on purpose: a word that can only begin a statement is
already refused twice over, and listing it would cost real queries, because
`comment` is an ordinary column name and `replace` an ordinary function.
Comments are skipped rather than parsed, so a `;` inside one no longer looks
like a second statement.

A URL with no `//` was read as in-process and never classified. Oracle's thin
driver writes `jdbc:oracle:thin:@db.internal:1521:ORCL`, so the destination
policy was silently optional for it. A URL whose host cannot be found is now
refused unless its subprotocol reaches no network, and credentials before the
host no longer stand in for it.

The rest of the review:

- rows go through the shared evidence capture. A policy capturing no bodies
  keeps the row count and drops the values, so `row-count` still answers while
  the assertions that read a value are indeterminate rather than wrong; a
  redact path naming a column replaces that column's cells.
- an expired or missing secret refuses the observation and is not retried,
  rather than connecting with a stale value and reporting what reads like the
  database rejecting the run.
- the connect timeout travels as a connection property. `setLoginTimeout` is
  process-wide state, and a connector has no business writing it.
- `row-unique` reads a SQL NULL as SQL does — two rows with no value are not
  duplicates — and compares numbers as decimals, a